force-app/main/default/objects/Participant_Workflow_Step__mdt/Participant_Workflow_Step__mdt.object-meta.xml
<CustomObject>
    <label>Participant Workflow Step</label>
    <pluralLabel>Participant Workflow Steps</pluralLabel>
</CustomObject>