force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/Additional_Notes_For_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_For_Statuses__c</fullName>
    <label>Additional Notes For Statuses</label>
    <type>TextArea</type>
</CustomField>