force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/Card_Name_Label__c.field-meta.xml
<CustomField>
    <fullName>Card_Name_Label__c</fullName>
    <label>Card Name Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>