force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/Failed_State_Editing_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Failed_State_Editing_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed State Editing Enabled</label>
    <type>Checkbox</type>
</CustomField>