force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/Form_Fields__c.field-meta.xml
<CustomField>
    <fullName>Form_Fields__c</fullName>
    <label>Form Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>