force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/History_Item_Details_Template_Label__c.field-meta.xml
<CustomField>
    <fullName>History_Item_Details_Template_Label__c</fullName>
    <label>History Item Details Template Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>