force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/In_Progress_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Date_Field__c</fullName>
    <label>In Progress Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>