force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/Name_Label__c.field-meta.xml
<CustomField>
    <fullName>Name_Label__c</fullName>
    <label>Name Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>