force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/No_Outcome_Label__c.field-meta.xml
<CustomField>
    <fullName>No_Outcome_Label__c</fullName>
    <label>No Outcome Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>