force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/Outcome_Placeholder_Label__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Placeholder_Label__c</fullName>
    <label>Outcome Placeholder Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>