force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/Success_Checkbox_Field__c.field-meta.xml
<CustomField>
    <fullName>Success_Checkbox_Field__c</fullName>
    <label>Success Checkbox Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>