force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/Success_Condition__c.field-meta.xml
<CustomField>
    <fullName>Success_Condition__c</fullName>
    <label>Success Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>