force-app/main/default/objects/Participant_Workflow_Step__mdt/fields/Success_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Success_Date_Field__c</fullName>
    <label>Success Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>